--- a/nima.html
+++ b/nima.html
@@ -1,3 +1,11 @@
-<script>
-    
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>This is world of learning and life of web development.</h1>
+</body>
+</html>
